@@ -1,3 +1,14 @@
+2012-10-21  Jim Blandy  <jimb@codesourcery.com>
+	    Joseph Myers  <joseph@codesourcery.com>
+
+	* config.make.in (NM): New variable.
+
+2012-10-21  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Remove all
+	definitions and declarations that are provided by
+	<bits/fcntl-linux.h> and include <bits/fcntl-linux.h>.
+
 2012-10-20  H.J. Lu  <hongjiu.lu@intel.com>
 
 	[BZ #14683]
